Simplify model and regularise fields
