# server/swagger_server/models/__init__.py
@@ -6,10 +6,9 @@ from __future__ import absolute_import
 from swagger_server.models.adult_social_care import AdultSocialCare
 from swagger_server.models.contact import Contact
 from swagger_server.models.housing import Housing
-from swagger_server.models.offence import Offence
 from swagger_server.models.person import Person
 from swagger_server.models.police import Police
+from swagger_server.models.police_offences import PoliceOffences
 from swagger_server.models.school import School
-from swagger_server.models.service_involvement import ServiceInvolvement
 from swagger_server.models.service_map import ServiceMap
 from swagger_server.models.source_data import SourceData
