# server/swagger_server/models/police.py
@@ -7,9 +7,9 @@ from typing import List, Dict  # noqa: F401
 
 from swagger_server.models.base_model_ import Model
 from swagger_server.models.contact import Contact  # noqa: F401,E501
-from swagger_server.models.offence import Offence  # noqa: F401,E501
-from swagger_server.models.service_involvement import ServiceInvolvement  # noqa: F401,E501
+from swagger_server.models.police_offences import PoliceOffences  # noqa: F401,E501
 from swagger_server.models.source_data import SourceData  # noqa: F401,E501
+import re  # noqa: F401,E501
 from swagger_server import util
 
 
@@ -18,7 +18,7 @@ class Police(Model):
 
     Do not edit the class manually.
     """
-    def __init__(self, coverage_start_date: date=None, coverage_end_date: date=None, coverage_geographic_area: str=None, contact: Contact=None, service_involvement: ServiceInvolvement=None, police_station: str=None, offences: List[Offence]=None):  # noqa: E501
+    def __init__(self, coverage_start_date: date=None, coverage_end_date: date=None, coverage_geographic_area: str=None, service_involvement: str=None, contact: Contact=None, police_station: str=None, offences: List[PoliceOffences]=None):  # noqa: E501
         """Police - a model defined in Swagger
 
         :param coverage_start_date: The coverage_start_date of this Police.  # noqa: E501
@@ -27,39 +27,39 @@ class Police(Model):
         :type coverage_end_date: date
         :param coverage_geographic_area: The coverage_geographic_area of this Police.  # noqa: E501
         :type coverage_geographic_area: str
+        :param service_involvement: The service_involvement of this Police.  # noqa: E501
+        :type service_involvement: str
         :param contact: The contact of this Police.  # noqa: E501
         :type contact: Contact
-        :param service_involvement: The service_involvement of this Police.  # noqa: E501
-        :type service_involvement: ServiceInvolvement
         :param police_station: The police_station of this Police.  # noqa: E501
         :type police_station: str
         :param offences: The offences of this Police.  # noqa: E501
-        :type offences: List[Offence]
+        :type offences: List[PoliceOffences]
         """
         self.swagger_types = {
             'coverage_start_date': date,
             'coverage_end_date': date,
             'coverage_geographic_area': str,
+            'service_involvement': str,
             'contact': Contact,
-            'service_involvement': ServiceInvolvement,
             'police_station': str,
-            'offences': List[Offence]
+            'offences': List[PoliceOffences]
         }
 
         self.attribute_map = {
             'coverage_start_date': 'coverageStartDate',
             'coverage_end_date': 'coverageEndDate',
             'coverage_geographic_area': 'coverageGeographicArea',
-            'contact': 'contact',
             'service_involvement': 'serviceInvolvement',
+            'contact': 'contact',
             'police_station': 'policeStation',
             'offences': 'offences'
         }
         self._coverage_start_date = coverage_start_date
         self._coverage_end_date = coverage_end_date
         self._coverage_geographic_area = coverage_geographic_area
-        self._contact = contact
         self._service_involvement = service_involvement
+        self._contact = contact
         self._police_station = police_station
         self._offences = offences
 
@@ -138,6 +138,27 @@ class Police(Model):
         self._coverage_geographic_area = coverage_geographic_area
 
     @property
+    def service_involvement(self) -> str:
+        """Gets the service_involvement of this Police.
+
+
+        :return: The service_involvement of this Police.
+        :rtype: str
+        """
+        return self._service_involvement
+
+    @service_involvement.setter
+    def service_involvement(self, service_involvement: str):
+        """Sets the service_involvement of this Police.
+
+
+        :param service_involvement: The service_involvement of this Police.
+        :type service_involvement: str
+        """
+
+        self._service_involvement = service_involvement
+
+    @property
     def contact(self) -> Contact:
         """Gets the contact of this Police.
 
@@ -157,27 +178,6 @@ class Police(Model):
         """
 
         self._contact = contact
-
-    @property
-    def service_involvement(self) -> ServiceInvolvement:
-        """Gets the service_involvement of this Police.
-
-
-        :return: The service_involvement of this Police.
-        :rtype: ServiceInvolvement
-        """
-        return self._service_involvement
-
-    @service_involvement.setter
-    def service_involvement(self, service_involvement: ServiceInvolvement):
-        """Sets the service_involvement of this Police.
-
-
-        :param service_involvement: The service_involvement of this Police.
-        :type service_involvement: ServiceInvolvement
-        """
-
-        self._service_involvement = service_involvement
 
     @property
     def police_station(self) -> str:
@@ -201,22 +201,22 @@ class Police(Model):
         self._police_station = police_station
 
     @property
-    def offences(self) -> List[Offence]:
+    def offences(self) -> List[PoliceOffences]:
         """Gets the offences of this Police.
 
 
         :return: The offences of this Police.
-        :rtype: List[Offence]
+        :rtype: List[PoliceOffences]
         """
         return self._offences
 
     @offences.setter
-    def offences(self, offences: List[Offence]):
+    def offences(self, offences: List[PoliceOffences]):
         """Sets the offences of this Police.
 
 
         :param offences: The offences of this Police.
-        :type offences: List[Offence]
+        :type offences: List[PoliceOffences]
         """
 
         self._offences = offences
