# server/swagger_server/models/school.py
@@ -7,8 +7,8 @@ from typing import List, Dict  # noqa: F401
 
 from swagger_server.models.base_model_ import Model
 from swagger_server.models.contact import Contact  # noqa: F401,E501
-from swagger_server.models.service_involvement import ServiceInvolvement  # noqa: F401,E501
 from swagger_server.models.source_data import SourceData  # noqa: F401,E501
+import re  # noqa: F401,E501
 from swagger_server import util
 
 
@@ -17,7 +17,7 @@ class School(Model):
 
     Do not edit the class manually.
     """
-    def __init__(self, coverage_start_date: date=None, coverage_end_date: date=None, coverage_geographic_area: str=None, contact: Contact=None, service_involvement: ServiceInvolvement=None, school_name: str=None, admission_type: str=None):  # noqa: E501
+    def __init__(self, coverage_start_date: date=None, coverage_end_date: date=None, coverage_geographic_area: str=None, service_involvement: str=None, contact: Contact=None, school_name: str=None, admission_type: str=None):  # noqa: E501
         """School - a model defined in Swagger
 
         :param coverage_start_date: The coverage_start_date of this School.  # noqa: E501
@@ -26,10 +26,10 @@ class School(Model):
         :type coverage_end_date: date
         :param coverage_geographic_area: The coverage_geographic_area of this School.  # noqa: E501
         :type coverage_geographic_area: str
+        :param service_involvement: The service_involvement of this School.  # noqa: E501
+        :type service_involvement: str
         :param contact: The contact of this School.  # noqa: E501
         :type contact: Contact
-        :param service_involvement: The service_involvement of this School.  # noqa: E501
-        :type service_involvement: ServiceInvolvement
         :param school_name: The school_name of this School.  # noqa: E501
         :type school_name: str
         :param admission_type: The admission_type of this School.  # noqa: E501
@@ -39,8 +39,8 @@ class School(Model):
             'coverage_start_date': date,
             'coverage_end_date': date,
             'coverage_geographic_area': str,
+            'service_involvement': str,
             'contact': Contact,
-            'service_involvement': ServiceInvolvement,
             'school_name': str,
             'admission_type': str
         }
@@ -49,16 +49,16 @@ class School(Model):
             'coverage_start_date': 'coverageStartDate',
             'coverage_end_date': 'coverageEndDate',
             'coverage_geographic_area': 'coverageGeographicArea',
-            'contact': 'contact',
             'service_involvement': 'serviceInvolvement',
+            'contact': 'contact',
             'school_name': 'schoolName',
             'admission_type': 'admissionType'
         }
         self._coverage_start_date = coverage_start_date
         self._coverage_end_date = coverage_end_date
         self._coverage_geographic_area = coverage_geographic_area
-        self._contact = contact
         self._service_involvement = service_involvement
+        self._contact = contact
         self._school_name = school_name
         self._admission_type = admission_type
 
@@ -137,6 +137,27 @@ class School(Model):
         self._coverage_geographic_area = coverage_geographic_area
 
     @property
+    def service_involvement(self) -> str:
+        """Gets the service_involvement of this School.
+
+
+        :return: The service_involvement of this School.
+        :rtype: str
+        """
+        return self._service_involvement
+
+    @service_involvement.setter
+    def service_involvement(self, service_involvement: str):
+        """Sets the service_involvement of this School.
+
+
+        :param service_involvement: The service_involvement of this School.
+        :type service_involvement: str
+        """
+
+        self._service_involvement = service_involvement
+
+    @property
     def contact(self) -> Contact:
         """Gets the contact of this School.
 
@@ -156,27 +177,6 @@ class School(Model):
         """
 
         self._contact = contact
-
-    @property
-    def service_involvement(self) -> ServiceInvolvement:
-        """Gets the service_involvement of this School.
-
-
-        :return: The service_involvement of this School.
-        :rtype: ServiceInvolvement
-        """
-        return self._service_involvement
-
-    @service_involvement.setter
-    def service_involvement(self, service_involvement: ServiceInvolvement):
-        """Sets the service_involvement of this School.
-
-
-        :param service_involvement: The service_involvement of this School.
-        :type service_involvement: ServiceInvolvement
-        """
-
-        self._service_involvement = service_involvement
 
     @property
     def school_name(self) -> str:
